Correct autofill color in dark mode
Updated autofill property on the input fields in the SCSS file to account for dark mode. The text color now changes to white when a user is using their device in dark mode, improving visibility of the input text.

--- a/src/styles/_autofill_fix.scss
+++ b/src/styles/_autofill_fix.scss
@@ -3,7 +3,9 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active{
   -webkit-background-clip: text;
-  -webkit-text-fill-color: #ffffff;
   transition: background-color 5000s ease-in-out 0s;
   box-shadow: inset 0 0 20px 20px transparent;
+  @media (prefers-color-scheme: dark) {
+    -webkit-text-fill-color: #ffffff;
+  }
 }
